--- a/webapp/package.json
+++ b/webapp/package.json
@@ -9,6 +9,8 @@
     "animate.css": "^4.1.1",
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.4",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "lucide-react": "^0.428.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
