--- a/mlmodels/requirements.txt
+++ b/mlmodels/requirements.txt
@@ -5,3 +5,5 @@ scikit-learn==1.3.2
 pydantic==1.10.7      
 requests==2.31.0      
 numpy==1.26.4
+opencv-python-headless==4.8.0.76
+ultralytics==8.0.8
